--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -404,8 +404,11 @@ font-display: fallback;
   display: flex;
   align-items: center;
   }
-  .social-media a {
+  .social-media a, .social-media svg {
   color: inherit;
+  width: 1em;
+  height: 1em;
+  margin-bottom: 2px;
   }
   .flow > * + * {
   margin-top: var(--flow-spacer);
@@ -458,42 +461,22 @@ font-display: fallback;
   display: block;
   font-size: var(--fs-1);
   font-weight: var(--fw-1);
-  margin-bottom: 0.25rem;
-  }
-  .post-previews li header {
-  font-weight: var(--fw-3);
   }
   .post-previews li p {
   font-weight: var(--fw-1);
   }
-  .post-previews li a {
-  display: inline-block;
-  margin-top: 1rem;
+  .post-previews li .post-metadata {
+  font-size: var(--fs-1);
+  font-weight: var(--fw-1);
+  margin-top: -0.25em;
   }
   .post-previews li + li {
   border-top: 1px solid color-mix(in srgb, var(--clr-foreground) 50%, var(--clr-background));
   }
-  .post header .subheader {
-  --horizontal-spacing: 0.75rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: var(--horizontal-spacing);
-  padding-top: 0.5rem;
+  .post .post-metadata {
   font-size: var(--fs-2);
   font-weight: var(--fw-1);
-  }
-  .post header .subheader * + * {
-  display: flex;
-  align-items: center;
-  }
-  .post header .subheader * + *:before {
-  content: "";
-  display: inline-block;
-  height: 1rem;
-  width: 1px;
-  margin-right: var(--horizontal-spacing);
-  background-color: currentColor;
+  padding-top: 0.5rem;
   }
   .post blockquote {
   box-shadow: inset 4px 0 0 0 var(--clr-accent);
@@ -506,6 +489,25 @@ font-display: fallback;
   overflow-x: scroll;
   font-family: var(--ff-code);
   font-size: var(--fs-1);
+  }
+  .post-metadata {
+  --horizontal-spacing: 0.75rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: var(--horizontal-spacing);
+  }
+  .post-metadata * + * {
+  display: flex;
+  align-items: center;
+  }
+  .post-metadata * + *:before {
+  content: "";
+  display: inline-block;
+  height: 1rem;
+  width: 1px;
+  margin-right: var(--horizontal-spacing);
+  background-color: currentColor;
   }
   .tags {
   display: flex;
